--- a/MyApplication/app/build.gradle
+++ b/MyApplication/app/build.gradle
@@ -10,7 +10,60 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+//jni
+        externalNativeBuild {
+            cmake {
+                arguments '-DANDROID_TOOLCHAIN=clang'
+            }
+        }
+
     }
+//jni
+    externalNativeBuild {
+        cmake {
+            path "src/main/cpp/CMakeLists.txt"
+        }
+    }
+    productFlavors {
+        arm7 {
+            // in the future, ndk.abiFilter might also work
+            ndk {
+                abiFilter 'armeabi-v7a'
+            }
+        }
+        arm8 {
+            ndk {
+                abiFilters 'arm64-v8a'
+            }
+        }
+        arm {
+            ndk {
+                abiFilter 'armeabi'
+            }
+        }
+        x86 {
+            ndk {
+                abiFilter 'x86'
+            }
+        }
+        x86_64 {
+            ndk {
+                abiFilter 'x86_64'
+            }
+        }
+        mips {
+            ndk {
+                abiFilters 'mips', 'mips64'
+            }
+        }
+        universal {
+            ndk {
+                abiFilters 'mips', 'mips64', 'x86', 'x86_64'
+            }
+        }
+    }
+
+
     buildTypes {
         release {
             minifyEnabled false
